[package]
edition = "2021"
name = "microledger-napi"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = {version = "2"}
napi-derive = "2"
microledger = {git = "https://github.com/THCLab/microledger.git"}
serde = { version = "1.0", features = ["derive"] }
ed25519-dalek = "1.0.1"
base64 = "0.21.0"
serde_json = "1"
keri = {git = "https://github.com/THCLab/keriox"}

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
